--- a/eCommerce-Application/src/styles/layout/_footer.scss
+++ b/eCommerce-Application/src/styles/layout/_footer.scss
@@ -50,19 +50,24 @@
         }
 
         img {
-            height: 12rem;
+            height: 5rem;
 
             filter: invert(0.5) brightness(190%);
+
+            @include mixins.respond-to('tablet') {
+                height: 12rem;
+            }
         }
     }
 
     &__social {
         --gap: 3rem;
-        @include mixins.flex(row, space-between, center);
+        @include mixins.flex(row, center, center);
 
         @include mixins.respond-to('desktop') {
             grid-column: 2 / span 2;
 
+            justify-content: space-between;
             align-items: stretch;
         }
 
@@ -77,15 +82,6 @@
 
             & img {
                 height: 6rem;
-            }
-        }
-
-        .social-logo {
-            --gap: 2rem;
-            @include mixins.flex(null, center, flex-end);
-
-            & img {
-                max-height: 4rem;
             }
         }
     }
@@ -112,15 +108,11 @@
         &-list {
             & > * + * {
                 margin-top: 2rem;
-
-                @include mixins.respond-to('desktop') {
-                    margin-top: 5rem;
-                }
             }
         }
 
         &-item {
-            a {
+            & > a {
                 position: relative;
 
                 &::before {
@@ -175,6 +167,23 @@
 
         span {
             align-self: flex-end;
+        }
+    }
+
+    .social-logo {
+        --gap: 2rem;
+        @include mixins.flex(null, center, center);
+
+        margin-top: 2rem;
+
+        & img {
+            max-height: 4rem;
+
+            filter: invert(1);
+        }
+
+        @include mixins.respond-to('desktop') {
+            justify-content: flex-start;
         }
     }
 }
