--- a/eCommerce-Application/src/styles/pages/_main.scss
+++ b/eCommerce-Application/src/styles/pages/_main.scss
@@ -7,7 +7,7 @@
     text-align: center;
 }
 
-main:not(#main, #login, #registration, #store, #about, #error-page) {
+main:not(#main, #login, #registration, #store, #about, #error-page, #profile) {
     background-image: url('../assets/images/bg-product.jpg');
     background-repeat: no-repeat;
     background-position: top;
