--- a/eCommerce-Application/src/styles/pages/_profile.scss
+++ b/eCommerce-Application/src/styles/pages/_profile.scss
@@ -1,7 +1,7 @@
 @use '../abstracts/mixins';
 
 .profile {
-    background-image: url('../assets/images/background-profile.png');
+    background-image: url('../assets/images/background-profile.jpg');
     background-size: cover;
     background-position: bottom;
 
