feat: add changing product quantity, productpage buttons, no-cart section

--- a/eCommerce-Application/src/styles/components/_buttons.scss
+++ b/eCommerce-Application/src/styles/components/_buttons.scss
@@ -190,6 +190,7 @@
     }
 
     &--basket {
+        width: fit-content;
         background-color: var(--color-primary);
         color: var(--color-secondary);
         font-weight: bold;
