--- a/eCommerce-Application/src/styles/components/_buttons.scss
+++ b/eCommerce-Application/src/styles/components/_buttons.scss
@@ -186,6 +186,7 @@
     }
 
     &--basket {
+        width: fit-content;
         background-color: var(--color-primary);
         color: var(--color-secondary);
         font-weight: bold;
