--- a/eCommerce-Application/src/styles/components/_modal.scss
+++ b/eCommerce-Application/src/styles/components/_modal.scss
@@ -3,6 +3,7 @@
 .modal {
     position: fixed;
     top: 0;
+    left: 0;
 
     width: 100%;
     height: 100%;
@@ -29,6 +30,22 @@
     &.active &__content {
         transform: translateY(0);
         opacity: 1;
+    }
+
+    &_confirm {
+        h4 {
+            text-align: center;
+            font-size: var(--fs-review);
+        }
+
+        .btn--basket {
+            position: static;
+            padding: 1rem;
+        }
+        .flex-2-col {
+            @include mixins.flex(row, space-between, center);
+            margin-top: 2rem;
+        }
     }
 
     &__content {
