--- a/eCommerce-Application/src/styles/pages/_cart.scss
+++ b/eCommerce-Application/src/styles/pages/_cart.scss
@@ -39,6 +39,18 @@
     * {
         text-align: center;
     }
+
+    button {
+        width: fit-content;
+
+        border-bottom: 1px solid transparent;
+
+        cursor: pointer;
+
+        &:hover {
+            border-bottom: 1px solid var(--color-primary);
+        }
+    }
 }
 
 .purchase {
