feat: add promocodes

--- a/eCommerce-Application/src/styles/components/_errors.scss
+++ b/eCommerce-Application/src/styles/components/_errors.scss
@@ -25,7 +25,11 @@
             top: -75%;
         }
     }
+    &_static {
+        position: static;
+    }
 }
+
 .error-connection {
     @include mixins.flex(row, center, center);
 
