--- a/eCommerce-Application/src/styles/layout/_product.scss
+++ b/eCommerce-Application/src/styles/layout/_product.scss
@@ -229,6 +229,8 @@
                 opacity: 0.5;
 
                 &-active {
+                    margin-left: -1rem;
+
                     color: var(--color-primary);
                     opacity: 1;
                 }
