--- a/eCommerce-Application/src/styles/pages/_registration.scss
+++ b/eCommerce-Application/src/styles/pages/_registration.scss
@@ -1,5 +1,5 @@
 #registration {
-    background-image: url('../assets/images/registration-bg.svg');
+    background-image: url('../assets/images/registration-bg.jpg');
     background-size: cover;
     background-position: center;
 }
