--- a/eCommerce-Application/src/styles/base/_typography.scss
+++ b/eCommerce-Application/src/styles/base/_typography.scss
@@ -512,3 +512,80 @@
         font-size: var(--fs-big);
     }
 }
+
+.about-us {
+    &__school-title {
+        font-family: var(--ff-product);
+        font-size: var(--fs-paragraph);
+    }
+
+    &__text-title {
+        font-family: var(--ff-secondary);
+        font-size: clamp(2rem, 3vw, 3rem);
+    }
+
+    &__text-subtitle {
+        font-family: var(--ff-secondary);
+        font-size: var(--fs-small);
+        line-height: 1.5;
+        letter-spacing: 0.05em;
+    }
+
+    &__text-detail {
+        font-family: var(--ff-product);
+        font-size: var(--fs-small);
+        letter-spacing: 0.05em;
+    }
+
+    &__foundation-title {
+        font-family: var(--ff-secondary);
+        font-size: var(--fs-big);
+    }
+
+    &__foundation-subtitle {
+        font-family: var(--ff-product);
+        font-size: var(--fs-big);
+        text-transform: capitalize;
+        text-align: center;
+
+        @include mixins.respond-to('desktop') {
+            text-align: left;
+        }
+    }
+
+    &__foundation-text {
+        font-family: var(--ff-product);
+        font-size: var(--fs-small);
+        letter-spacing: 0.05em;
+        text-align: center;
+
+        @include mixins.respond-to('desktop') {
+            text-align: left;
+        }
+    }
+
+    &__card-title {
+        font-family: var(--ff-secondary);
+        font-size: var(--fs-paragraph);
+    }
+
+    &__card-subtitle {
+        font-family: var(--ff-product);
+        font-size: var(--fs-medium-big);
+        letter-spacing: 0.05em;
+    }
+
+    &__card-text {
+        font-family: var(--ff-product);
+        font-size: var(--fs-small);
+        letter-spacing: 0.05em;
+    }
+
+    &__postscript {
+        font-family: var(--ff-primary);
+        font-size: var(--fs-paragraph);
+        text-transform: uppercase;
+        letter-spacing: 0.05em;
+        line-height: 1.6;
+    }
+}
